Math_42/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Math_42_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:target/classes/  /home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:33: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, 0.0, 1791);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:75: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, true, Double.NEGATIVE_INFINITY, (-2741));
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:109: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:152: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:167: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:181: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, true, 410.91, (-178912606));
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:182: error: cannot find symbol
      simplexTableau0.dropPhase1Objective();
                     ^
  symbol:   method dropPhase1Objective()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:192: error: cannot find symbol
      boolean boolean0 = simplexTableau0.isOptimal();
                                        ^
  symbol:   method isOptimal()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:204: error: cannot find symbol
      boolean boolean0 = simplexTableau0.isOptimal();
                                        ^
  symbol:   method isOptimal()
  location: variable simplexTableau0 of type SimplexTableau
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:218: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau0 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, (double) doubleArray0[1], 1);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
/home/liumengjiao/Desktop/CI/Evosuite/Math_42/Math/evosuite/3/org/apache/commons/math/optimization/linear/SimplexTableau_ESTest.java:354: error: constructor SimplexTableau in class SimplexTableau cannot be applied to given types;
      SimplexTableau simplexTableau1 = new SimplexTableau(linearObjectiveFunction0, linkedList0, goalType0, false, 1.0E-12, 912);
                                       ^
  required: LinearObjectiveFunction,Collection<LinearConstraint>,GoalType,boolean,double
  found: LinearObjectiveFunction,LinkedList<LinearConstraint>,GoalType,boolean,double,int
  reason: actual and formal argument lists differ in length
11 errors
